# blakerain.com

./: .env.local  .gitignore  .swcrc  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  Trunk.toml  _typos.toml  amplify.yaml  build.rs  extra_stats.json  gen-bookmark.sh  go.mod  go.sum  hugo.toml  hugo.yaml  hugo_stats.json  index.html  next-seo.config.js  next-sitemap.config.js  next-sitemap.js  next.config.js  package-lock.json  package.json  populate-db.py  postcss.config.js  routes.yaml  simple-search-ssl.conf  simple-search.conf  simple-search.py  simple-search.service  site.yaml  static.config.js  tailwind.config.js  tsconfig.json
.forgejo/workflows/: check.yaml  deploy.yaml
.gitea/workflows/: check.yaml  deploy.yaml
.github/workflows/: check.yaml  deploy-static-site.yml  deploy-theme.yml  deploy.yaml  update-search-data.yml
adapters/storage/: s3.js
analytics/lambda/: Cargo.toml  local.sh  local.toml  response.json
analytics/lambda/src/: config.rs  env.rs  handlers.rs  lib.rs
analytics/lambda/src/endpoints/: auth.rs
analytics/lambda/src/handlers/: auth.rs  page_view.rs  query.rs
analytics/model/: Cargo.toml
analytics/model/migrations/: 001_views.sql  002_users.sql
analytics/model/src/: lib.rs  query.rs  user.rs  view.rs
assets/css/: main.css  reset.css  syntax.css  tokens.css
assets/js/: navigation.js  number-input.js  toggle.js
casper-customized/: README.md  custom-presentation.hbs  custom-projects.hbs  default.hbs  gulpfile.js  index.hbs  package.json  page.hbs  post.hbs  projects.hbs  root.hbs  search-page.css  search-page.html  tag.hbs
casper-customized/partials/: header-background.hbs  post-card.hbs  site-header.hbs  site-nav.hbs  subscribe-form.hbs
cf/: amplify.yaml  analytics.yaml  certificate.yaml  site.yaml
components/: Analytics.tsx  Card.module.scss  Content.module.scss  Content.tsx  CurrencySelect.tsx  DateSpan.tsx  Dismissable.tsx  Document.module.scss  Document.tsx  DropdownButton.module.scss  DropdownButton.tsx  FloatingLabel.module.scss  FloatingLabel.tsx  Footer.module.scss  Footer.tsx  Grid.tsx  Layout.module.scss  Layout.tsx  Metadata.tsx  Navigation.module.scss  Navigation.tsx  NumberInput.module.scss  NumberInput.tsx  PostCard.module.scss  PostCard.tsx  PostDetails.module.scss  PostDetails.tsx  ScrollToTop.module.scss  ScrollToTop.tsx  SyntaxHighlighter.tsx  TagList.module.scss  TagList.tsx  Toggle.module.scss  Tooltip.module.scss  Tooltip.tsx
components/analytics/: BrowserChart.module.scss  BrowserIcon.tsx  BrowserReport.tsx  LineChart.tsx  MonthlyReport.tsx  PieChart.tsx  Report.module.scss  Report.tsx  SignIn.module.scss  SignIn.tsx  WeeklyReport.tsx
components/article/: Content.module.scss  Content.tsx  Render.module.scss  Render.tsx  RevisionHistory.module.scss  SyntaxHighlight.ts
components/display/: Card.tsx  ClientOnly.tsx  Grid.tsx  Image.tsx  TagList.tsx  Tooltip.module.scss  Tooltip.tsx
components/fields/: CurrencySelect.tsx  DropdownButton.module.scss  DropdownButton.tsx  NumberInput.tsx  ScrollToTop.module.scss  ScrollToTop.tsx  Toggle.module.scss
components/icons/: Arrow.tsx  Caret.tsx  DevTo.tsx  Mastodon.tsx  Twitter.tsx
components/search/: SearchContainer.module.scss  SearchContainer.tsx  SearchData.ts  SearchDialog.module.scss  SearchDialog.tsx  SearchGrid.scss  SearchHighlighter.module.scss  SearchHighlighter.tsx  SearchProvider.tsx
content/: _index.md  about.md  blank.md  blogroll.md  changelog.md  copyright.md  disclaimer.md  hosting.md  index.md  navigation.yaml  tags.yaml  uses.md
data/: social.yaml  tag.json  tags.yaml
docs/: analytics-layout.drawio
ghost/: config.production.json
lambda/: CMakeLists.txt  Cargo.toml  Dockerfile  Dockerfile.in  Makefile  build-search.py  build.sh  dependencies.py  lambda_function.py  requirements.txt
lambda/analytics-api/: dependencies.py  lambda_function.py
lambda/blakerain/: setup.py
lambda/blakerain-analytics-api/: lambda_function.py
lambda/blakerain-analytics-trigger/: lambda_function.py
lambda/blakerain/model/: base.py  page_views.py
lambda/ghost-post-actions/: index.js
lambda/old/: extract-docker-file.sh
lambda/old/blakerain-analytics-trigger/: lambda_function.py
lambda/page-view/: lambda_function.py
lambda/page-view-trigger/: lambda_function.py
lambda/src/: env.rs  lib.rs
lambda/src/api/: auth.rs  mod.rs  page_view.rs  utils.rs  view_query.rs
lambda/src/model/: mod.rs  page_view.rs
lambda/src/model/dynamodb/: attribute.rs  item.rs  mod.rs
layouts/: 404.html  baseof.html  index.html  rss.xml  single.html
lib/: analytics.ts  content.ts  feeds.ts  ghost.ts  git.ts  indices.ts  missing.d.ts  mobiledoc.ts  navigation.ts  plugins.ts  tags.ts
macros/: Cargo.toml
macros/src/: documents.rs  error.rs  lib.rs  parse.rs  slug.rs  tags.rs
macros/src/documents/: highlight.rs  markdown.rs  toml.sublime-syntax  typescript.sublime-syntax  writer.rs
macros/src/parse/: boolean.rs  frontmatter.rs  properties.rs
media/: cartographer.pxd  logo-text.idraw  logo.idraw  topology.afdesign
model/: Cargo.toml
model/src/: document.rs  frontmatter.rs  lib.rs  properties.rs  search.rs  tag.rs
model/src/search/: stop.rs  tokens.rs
old/: tsconfig.json
pages/: [slug].tsx  _app.tsx  _document.tsx  analytics.module.scss  analytics.tsx  blog.tsx  index.tsx  search.module.scss  search.tsx  tags.tsx  tags.tsx_
public/: analytics.js  format.js  google-fonts.css  robots.txt  site.webmanifest
runner/: Dockerfile  entrypoint.sh
s3/: index.html
scripts/: select-template.sh
search/: requirements.txt  update-search.py
src/: App.js  App.less  analytics.rs  app.rs  components.rs  config.rs  lib.rs  model.rs  pages.rs  render.rs  templates.rs  tracing.rs
static/: human.json  robots.txt
style/: main.css
styles/: code.scss  colors.scss  const.scss  fonts.scss  global.scss  post.scss  tools.scss
templates/: base.html  home.html  page.html  rss.xml  sitemap.xml  tags.html
tools/: build-indices.ts  build.sh  bump-version.py  extract-ghost.js  finalize.js  gen-bookmark.py  generate-rss.ts  optimize-images.js  prepare.sh
(+508 files in other folders)
