[package]
name = "blakerain-com"
version = "3.0.0"
authors = ["Blake Rain <blake@blakerain.com>"]
edition = "2021"
rust-version = "1.93"

[dependencies]
anyhow = { version = "1.0" }
base64 = { version = "0.22" }
clap = { version = "4.5", features = ["derive", "env"] }
image = { version = "0.25" }
minify-html = { version = "0.18" }
pulldown-cmark = { version = "0.13" }
pulldown-cmark-escape = { version = "0.11" }
regex = { version = "1.12" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.10" }
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
toml = { version = "1.0", features = ["parse"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "tracing-log"] }
walkdir = { version = "2.5" }
webp = { version = "0.3" }
yaml-rust = { version = "0.4" }

[dependencies.minijinja]
version = "2.16"
features = [
  "json",
  "loader",
  "speedups",
  "unicode",
  "urlencode",
]
