[package]
name = "blakerain-analytics-lambdas"
version = "0.1.0"
authors = ["Blake Rain <blakerain@blakerain.com>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Analytics lambdas for my site"
homepage = "https://www.blakerain.com/"
repository = "https://github.com/BlakeRain/blakerain.com"
publish = false

[dependencies]

aws-config = "0.6.0"
aws-sdk-dynamodb = "0.6.0"

lambda_http = "0.4.1"
lambda_runtime = "0.4.1"

tokio = { version = "1", features = ["full"] }
