[package]
name = "blakerain-analytics-lambdas"
version = "0.1.0"
authors = ["Blake Rain <blakerain@blakerain.com>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Analytics lambdas for my site"
homepage = "https://www.blakerain.com/"
repository = "https://github.com/BlakeRain/blakerain.com"
publish = false

[dependencies]
aws-config = "0.6.0"
aws-sdk-dynamodb = "0.6.0"
base64 = "0.13"
fernet = "0.1.4"
http = "0.2"
lambda_http = "0.4.1"
lambda_runtime = "0.4.1"
time = { version = "0.3.7", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }
pbkdf2 = "0.10"
rand_core = { version = "0.6", features = ["std"] }
serde = "1.0"
serde_json = "1.0"
woothee = "0.13"
