[package]
name = "macros"
version = "0.1.0"
publish = false
edition = "2021"

[lib]
proc-macro = true

[dependencies]
lazy_static = { version = "1.4" }
proc-macro2 = { version = "1.0" }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
syn = "2.0"
thiserror = { version = "1.0" }

# Markdown content parsing
gray_matter = { version = "0.2", default-features = false, features = ["yaml"] }
nom = { version = "7.1" }
pulldown-cmark = { version = "0.9" }
syntect = { version = "5.1", features = ["default-themes", "default-syntaxes"] }
words-count = { version = "0.1" }

model = { path = "../model" }

[dependencies.time]
version = "0.3"
features = [
  "formatting",
  "parsing",
]
