[package]
name = "model"
version = "2.0.0"
publish = false
edition = "2021"

[dependencies]
postcard = { version = "1.0", features = ["use-std"] }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0" }
time = { version = "0.3", features = ["serde", "parsing"] }
