[package]
name = "analytics-lambda"
version = "0.1.0"
edition = "2021"
publish = false

[features]
local = []

[dependencies]
async-trait = { version = "0.1" }
env_logger = { version = "0.10" }
fernet = { version = "0.2" }
lambda_runtime = "0.8"
log = { version = "0.4" }
poem = { version = "1.3" }
poem-lambda = { version = "1.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
time = { version = "0.3", features = ["formatting", "serde"] }
tokio = { version = "1", features = ["full"] }
toml = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "tracing-log"] }
uuid = { version = "1.2", features = ["v4", "serde"] }

analytics-model = { path = "../model" }

[dependencies.sqlx]
version = "0.7"
features = [
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "time",
  "uuid"
]
