[package]
name = "analytics-model"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
log = { version = "0.4" }
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "serde"] }
uuid = { version = "1.2", features = ["v4", "serde"] }

[dependencies.sqlx]
version = "0.7"
features = [
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "time",
  "uuid"
]
